--- a/aula07/redes_neurais_classificacao.slides.html
+++ b/aula07/redes_neurais_classificacao.slides.html
@@ -17415,7 +17415,9 @@ require(
             controls: true,
             progress: true,
             history: true,
-            transition: "slide",
+            transition: "slide",            
+            width:1200,
+            center: true,             
         });
 
         var update = function(event){
