--- a/aula08/redes_neurais_classificacao_imagens.slides.html
+++ b/aula08/redes_neurais_classificacao_imagens.slides.html
@@ -16067,8 +16067,9 @@ require(
             controls: true,
             progress: true,
             history: true,
-
             transition: "slide",
+            width:1200,
+            center: true,             
 
             // Optional libraries used to extend on reveal.js
             dependencies: [
