added deep learning

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <li><a class="menu_subitem" href="aula05/preprocessamento_de_imagens.slides.html">Pré-processamento de Imagens</a></li>            
             <li><a class="menu_subitem" href="aula07/redes_neurais_classificacao.slides.html">Construção de Redes Neurais</a></li>
             <li><a class="menu_subitem" href="aula08/redes_neurais_classificacao_imagens.slides.html">Análise e Classificação de Imagens</a></li>
-            <li><a class="menu_subitem" href="aula09/redes_neurais_regressão_sequencias.slides.html">Análise de Dados Sequenciais</a></li>            
+            <li><a class="menu_subitem" href="aula09/redes_neurais_deep_learning.html">Deep Learning / Camadas Convolucionais</a></li>
+            <li><a class="menu_subitem" href="aula09/redes_neurais_deep_learning_pretrained.html">Deep Learning / Pretrained</a></li>
+            <li><a class="menu_subitem" href="aula10/redes_neurais_regressão_sequencias.slides.html">Análise de Dados Sequenciais</a></li>            
             <!-- <li><a class="menu_subitem" href="javascript:;">Análise de Textos</a></li>            -->
           </ul>
         </div>
